--- a/css/style.css
+++ b/css/style.css
@@ -110,4 +110,50 @@ ul {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.presentation {
+  padding: 20px 28px 103px;
+}
+.presentation__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.presentation__img {
+  width: 100%;
+}
+.presentation__card-info {
+  padding: 15px 25px 21px 17px;
+}
+.presentation__card {
+  border-radius: 9px;
+  box-shadow: 0px 0px 40px 0px rgba(184, 0, 95, 0.2);
+}
+.presentation__card-title {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+.presentation__card-description {
+  color: #767676;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.reviews {
+  padding: 37px 26px 49px;
+  background-image: linear-gradient(94deg, rgba(212, 20, 90, 0.25) 0.96%, rgba(46, 49, 146, 0.25) 104.83%);
+}
+.reviews__title {
+  display: hi;
+}
+.reviews__item {
+  border-radius: 9px;
+  background: #fff;
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
 }/*# sourceMappingURL=style.css.map */
