--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,5 +110,60 @@
   }
 }
 
-.promotion {
+.presentation {
+  padding: 20px 28px 103px;
+
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  &__img {
+    width: 100%;
+  }
+
+  &__card-info {
+    padding: 15px 25px 21px 17px;
+  }
+
+  &__card {
+    border-radius: 9px;
+    box-shadow: 0px 0px 40px 0px rgba(184, 0, 95, 0.2);
+  }
+
+  &__card-title {
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 10px;
+  }
+
+  &__card-description {
+    color: $dark-grey;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+  }
+}
+
+.reviews {
+  padding: 37px 26px 49px;
+  background-image: linear-gradient(
+    94deg,
+    rgba(212, 20, 90, 0.25) 0.96%,
+    rgba(46, 49, 146, 0.25) 104.83%
+  );
+
+  &__title {
+    display: hi;
+  }
+
+  &__item {
+    border-radius: 9px;
+    background: #fff;
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
+  }
 }
