--- a/scss/style.scss
+++ b/scss/style.scss
@@ -150,20 +150,51 @@
 }
 
 .reviews {
-  padding: 37px 26px 49px;
+  padding: 97px 26px 49px;
   background-image: linear-gradient(
     94deg,
     rgba(212, 20, 90, 0.25) 0.96%,
     rgba(46, 49, 146, 0.25) 104.83%
   );
 
-  &__title {
-    display: hi;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 86px;
   }
 
   &__item {
     border-radius: 9px;
     background: #fff;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
+    position: relative;
+    height: 210px;
+    padding: 76px 30px 0;
+    box-sizing: border-box;
+  }
+}
+
+.reviewer__pic {
+  position: absolute;
+  top: -90px;
+  left: 50px;
+}
+
+.review {
+  &__text {
+    text-align: center;
+    font-size: 12px;
+    line-height: normal;
+  }
+  &__reviewer-name {
+    display: block;
+    text-align: center;
+    line-height: normal;
+    color: $light-grey;
+  }
+  &__decor-line {
+    display: flex;
+    justify-content: center;
+    margin: 18px 0;
   }
 }
