--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,11 +33,18 @@
     flex-direction: column;
     margin-bottom: 8px;
   }
-  &__your-city {
+  &__phone-link {
+    color: $white;
+  }
+  &__your-city-link {
     font-family: "Roboto";
     font-weight: 300;
     font-size: 17px;
     line-height: 16px;
+    color: $white;
+  }
+  &__visit-social {
+    display: none;
   }
 }
 
@@ -62,11 +69,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 23px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding-bottom: 11px;
 
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   &__title {
     text-align: center;
     font-size: 25px;
@@ -101,6 +110,7 @@
   font-size: 20px;
   font-weight: 400;
   line-height: normal;
+  text-align: center;
 
   &--colored {
     background-image: linear-gradient(180deg, #b90160 0%, #3d5bf5 100%);
@@ -196,5 +206,86 @@
     display: flex;
     justify-content: center;
     margin: 18px 0;
+  }
+}
+
+.footer {
+  background-color: $white;
+  padding: 61px 0 50px;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__title {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  &__phones {
+    margin-bottom: 20px;
+  }
+  &__phone-link {
+    color: $black;
+    font-size: 14px;
+    line-height: 9.5px;
+  }
+  &__social {
+    margin-bottom: 15px;
+  }
+  &__text {
+    width: 230px;
+    text-align: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding: 25px 45px;
+    &__phones {
+      display: none;
+    }
+    &__your-city-link {
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 16px;
+      position: relative;
+    }
+    &__your-city-link::before {
+      content: url(/images/location.svg);
+      position: absolute;
+      left: -16px;
+    }
+    &__visit-social {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+    &__content {
+      display: flex;
+      justify-content: flex-end;
+      gap: 100px;
+      align-items: center;
+    }
+    &__visit-text {
+      width: 100px;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 14px;
+      text-align: start;
+    }
+  }
+
+  .logo {
+    &-pic {
+      width: 100px;
+      height: 60px;
+    }
+    &-text {
+      font-size: 36px;
+    }
   }
 }
