--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ ul {
 }
 
 .header {
-  padding: 22px 0;
+  padding: 22px 0 18px;
   background-image: linear-gradient(270deg, rgba(46, 49, 146, 0.7) 0%, rgba(212, 20, 90, 0.7) 98.16%);
 }
 .header__content {
@@ -34,10 +34,10 @@ ul {
   font-weight: 500;
   font-size: 14px;
   line-height: 9.5px;
-  gap: 7px;
+  gap: 8px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 8px;
+  margin-bottom: 14px;
 }
 .header__phone-link {
   color: #fff;
@@ -54,11 +54,11 @@ ul {
 }
 
 .logo {
-  padding: 26px 0 15px;
   display: flex;
   align-items: center;
   gap: 9px;
   justify-content: center;
+  margin-bottom: 15px;
 }
 .logo-text {
   width: 114px;
@@ -68,34 +68,31 @@ ul {
   line-height: normal;
 }
 
-.order {
-  background-image: url(../images/back-figures.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-top: 23px;
+.intro {
   padding-bottom: 11px;
 }
-.order__inner {
+.intro__inner {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 26px;
 }
-.order__title {
+.intro__title {
   text-align: center;
   font-size: 25px;
   font-style: normal;
   font-weight: 900;
   line-height: 25px;
-  width: 200px;
   margin: 0 auto 8px;
+  width: 200px;
 }
-.order__subtitle {
+.intro__subtitle {
   display: block;
   text-align: center;
   font-size: 20px;
   margin-bottom: 9px;
 }
-.order__button {
+.intro__button {
   color: #fff;
   border-radius: 7px;
   background-image: linear-gradient(95deg, #b90160 2.23%, #2e3192 99.51%);
@@ -107,6 +104,16 @@ ul {
   width: 93px;
   height: 28px;
   margin-bottom: 53px;
+}
+.intro__inner-wrapper {
+  background-image: url(../images/back-figures.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 23px 3% 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .what-is__title {
@@ -123,7 +130,7 @@ ul {
 }
 
 .presentation {
-  padding: 20px 28px 103px;
+  padding: 34px 28px 100px;
 }
 .presentation__cards {
   display: flex;
@@ -134,7 +141,7 @@ ul {
   width: 100%;
 }
 .presentation__card-info {
-  padding: 15px 25px 21px 17px;
+  padding: 13px 25px 21px 17px;
 }
 .presentation__card {
   border-radius: 9px;
@@ -177,7 +184,7 @@ ul {
 .reviewer__pic {
   position: absolute;
   top: -90px;
-  left: 50px;
+  left: 58px;
 }
 
 .review__text {
@@ -211,10 +218,13 @@ ul {
   font-weight: 700;
   line-height: normal;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
 }
 .footer__phones {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
 }
 .footer__phone-link {
   color: #000;
@@ -222,10 +232,14 @@ ul {
   line-height: 9.5px;
 }
 .footer__social {
-  margin-bottom: 15px;
+  margin-bottom: 8px;
 }
 .footer__text {
-  width: 230px;
+  width: 225px;
+  text-align: center;
+}
+.footer__span {
+  display: block;
   text-align: center;
 }
 
@@ -264,6 +278,17 @@ ul {
     font-weight: 500;
     line-height: 14px;
     text-align: start;
+  }
+  .intro__inner {
+    align-items: start;
+    padding: 62px 66px 0;
+  }
+  .intro__inner-wrapper {
+    align-items: start;
+  }
+  .intro__title {
+    text-align: start;
+    margin: 0px;
   }
   .logo-pic {
     width: 100px;
