--- a/css/style.css
+++ b/css/style.css
@@ -279,22 +279,80 @@ ul {
     line-height: 14px;
     text-align: start;
   }
+  .intro {
+    padding-bottom: 0;
+  }
   .intro__inner {
     align-items: start;
     padding: 62px 66px 0;
   }
   .intro__inner-wrapper {
     align-items: start;
+    padding: 0;
+    background-image: none;
+    position: relative;
+  }
+  .intro__inner-wrapper::after {
+    content: url(/images/tablet-figures.svg);
+    position: absolute;
+    left: 338px;
+    bottom: 159px;
   }
   .intro__title {
     text-align: start;
-    margin: 0px;
+    margin: 0 0 30px;
+    font-size: 40px;
+    line-height: 40px;
+    width: 350px;
+  }
+  .intro__subtitle {
+    font-size: 24px;
+    margin-bottom: 25px;
+  }
+  .intro__button {
+    width: 141px;
+    height: 42px;
+    font-size: 15px;
+    margin-bottom: 206px;
+  }
+  .what-is__title {
+    font-size: 40px;
+    margin: 0 auto;
+  }
+  .logo {
+    gap: 24px;
+    margin-bottom: 61px;
+    position: relative;
   }
   .logo-pic {
     width: 100px;
     height: 60px;
   }
   .logo-text {
+    font-size: 36px;
+    width: 160px;
+    display: block;
+  }
+  .logo::after {
+    content: url(/images/tablet-back.svg);
+    position: absolute;
+    left: 216px;
+    top: 25px;
+  }
+  .presentation {
+    padding: 78px 87px 124px;
+  }
+  .presentation__cards {
+    gap: 61px;
+  }
+  .presentation__img {
+    width: 100%;
+    border-radius: 9px 9px 0 0;
+  }
+  .presentation__card-info {
+    padding: 25px 60px 25px 40px;
+  }
+  .presentation_card-title {
     font-size: 36px;
   }
 }/*# sourceMappingURL=style.css.map */
