--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,8 @@ ul {
   height: 210px;
   padding: 76px 30px 0;
   box-sizing: border-box;
+  max-width: 536px;
+  margin: 0 auto;
 }
 
 .reviewer__pic {
@@ -354,5 +356,47 @@ ul {
   }
   .presentation_card-title {
     font-size: 36px;
+  }
+  .reviewer__pic {
+    left: 34%;
+  }
+  .review__text {
+    width: 445px;
+    font-size: 18px;
+  }
+  .reviews {
+    padding-bottom: 72px;
+  }
+  .reviews__item {
+    padding: 76px 45px 0;
+  }
+  .footer {
+    padding: 115px 70px 50px 45px;
+  }
+  .footer__inner {
+    flex-direction: row;
+  }
+  .footer__phones-box {
+    order: 1;
+  }
+  .footer__socialmedia-box {
+    order: 0;
+  }
+  .footer__about-box {
+    order: 2;
+  }
+  .footer__inner {
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  .footer__title {
+    text-align: start;
+  }
+  .footer__text {
+    text-align: left;
+    margin-bottom: 15px;
+  }
+  .footer__span {
+    text-align: left;
   }
 }/*# sourceMappingURL=style.css.map */
