--- a/scss/style.scss
+++ b/scss/style.scss
@@ -188,6 +188,8 @@
     height: 210px;
     padding: 76px 30px 0;
     box-sizing: border-box;
+    max-width: 536px;
+    margin: 0 auto;
   }
 }
 
@@ -372,6 +374,54 @@
     }
     &_card-title {
       font-size: 36px;
+    }
+  }
+
+  .reviewer__pic {
+    left: 34%;
+  }
+
+  .review__text {
+    width: 445px;
+    font-size: 18px;
+  }
+
+  .reviews {
+    padding-bottom: 72px;
+
+    &__item {
+      padding: 76px 45px 0;
+    }
+  }
+
+  .footer {
+    padding: 115px 70px 50px 45px;
+
+    &__inner {
+      flex-direction: row;
+    }
+    &__phones-box {
+      order: 1;
+    }
+    &__socialmedia-box {
+      order: 0;
+    }
+    &__about-box {
+      order: 2;
+    }
+    &__inner {
+      justify-content: space-between;
+      align-items: baseline;
+    }
+    &__title {
+      text-align: start;
+    }
+    &__text {
+      text-align: left;
+      margin-bottom: 15px;
+    }
+    &__span {
+      text-align: left;
     }
   }
 }
