--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,13 @@
 .intro {
   padding-bottom: 11px;
 
+  &__background {
+    display: none;
+  }
+  &__background-figures {
+    display: none;
+  }
+
   &__inner {
     display: flex;
     flex-direction: column;
@@ -105,7 +112,7 @@
     background-image: url(../images/back-figures.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 23px 3% 10px;
+    padding: 23px 0 10px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -256,6 +263,10 @@
     display: block;
     text-align: center;
   }
+  &__link {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media (min-width: 768px) {
@@ -274,6 +285,8 @@
       content: url(/images/location.svg);
       position: absolute;
       left: -16px;
+      width: 10px;
+      height: 17px;
     }
     &__visit-social {
       display: flex;
@@ -297,21 +310,34 @@
 
   .intro {
     padding-bottom: 0;
+
+    &__background {
+      display: initial;
+      position: absolute;
+      right: 0;
+      top: 79px;
+    }
+    &__background-figures {
+      display: initial;
+      position: absolute;
+      right: 22px;
+      bottom: 172px;
+    }
     &__inner {
       align-items: start;
       padding: 62px 66px 0;
+      position: relative;
     }
     &__inner-wrapper {
       align-items: start;
       padding: 0;
       background-image: none;
-      position: relative;
-      &::after {
-        content: url(/images/tablet-figures.svg);
-        position: absolute;
-        left: 338px;
-        bottom: 159px;
-      }
+      // position: relative;
+      // &::after {
+      //   content: url(/images/tablet-figures.svg);
+      // position: absolute;
+      // left: 338px;
+      // bottom: 159px;
     }
     &__title {
       text-align: start;
@@ -340,7 +366,7 @@
   .logo {
     gap: 24px;
     margin-bottom: 61px;
-    position: relative;
+    // position: relative;
 
     &-pic {
       width: 100px;
@@ -351,12 +377,12 @@
       width: 160px;
       display: block;
     }
-    &::after {
-      content: url(/images/tablet-back.svg);
-      position: absolute;
-      left: 216px;
-      top: 25px;
-    }
+    // &::after {
+    //   content: url(/images/tablet-back.svg);
+    //   position: absolute;
+    //   left: 216px;
+    //   top: 25px;
+    // }
   }
 
   .presentation {
@@ -422,6 +448,41 @@
     }
     &__span {
       text-align: left;
+    }
+  }
+}
+
+@media (min-width: 1439px) {
+  .header {
+    padding: 23px 120px 23px 128px;
+
+    &__content {
+      justify-content: space-between;
+    }
+    &__phones {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 0;
+      gap: 12px;
+    }
+    &__phones::before {
+      content: url(/images/phone-icon.svg);
+    }
+    &__phone {
+      display: flex;
+      align-items: center;
+    }
+    &__phone-link {
+      font-size: 15px;
+    }
+    &__your-city-link {
+      font-size: 15px;
+    }
+    &__your-city-link::before {
+      content: url(/images/location.svg);
+      width: 15px;
+      height: 25px;
+      left: -20px;
     }
   }
 }
