adapted review for desktop

--- a/css/style.css
+++ b/css/style.css
@@ -512,4 +512,12 @@ ul {
   .presentation__card-info {
     padding: 25px 30px 35px 20px;
   }
+  .reviews {
+    overflow-x: scroll;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .reviews__list {
+    flex-direction: row;
+  }
 }/*# sourceMappingURL=style.css.map */
