changed path icons header

--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ ul {
     gap: 12px;
   }
   .header__phones::before {
-    content: url(/images/phone-icon.svg);
+    content: url(images/phone-icon.svg);
   }
   .header__phone {
     display: flex;
@@ -449,7 +449,7 @@ ul {
     font-size: 15px;
   }
   .header__your-city-link::before {
-    content: url(/images/location.svg);
+    content: url(images/location.svg);
     width: 15px;
     height: 25px;
     left: -20px;
