--- a/scss/style.scss
+++ b/scss/style.scss
@@ -484,12 +484,12 @@
     &__your-city-link {
       font-size: 15px;
     }
-    &__your-city-link::before {
-      content: url("./images/location.svg");
-      width: 15px;
-      height: 25px;
-      left: -20px;
-    }
+  }
+  .header__your-city-link::before {
+    content: url("./images/location.svg");
+    width: 15px;
+    height: 25px;
+    left: -20px;
   }
 
   .intro {
