--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ ul {
   font-style: italic;
   font-size: 18px;
   line-height: normal;
+  color: #000;
 }
 
 .intro {
@@ -115,6 +116,7 @@ ul {
   width: 93px;
   height: 28px;
   margin-bottom: 53px;
+  cursor: pointer;
 }
 .intro__inner-wrapper {
   background-image: url(../images/back-figures.jpg);
