--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,21 @@
   }
 }
 
+.button {
+  color: $white;
+  border-radius: 7px;
+  background-image: linear-gradient(95deg, #b90160 2.23%, #2e3192 99.51%);
+  border: transparent;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  width: 93px;
+  height: 28px;
+  margin-bottom: 53px;
+  cursor: pointer;
+}
+
 .intro {
   padding-bottom: 11px;
 
@@ -95,20 +110,6 @@
     text-align: center;
     font-size: 20px;
     margin-bottom: 9px;
-  }
-  &__button {
-    color: $white;
-    border-radius: 7px;
-    background-image: linear-gradient(95deg, #b90160 2.23%, #2e3192 99.51%);
-    border: transparent;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    width: 93px;
-    height: 28px;
-    margin-bottom: 53px;
-    cursor: pointer;
   }
   &__inner-wrapper {
     background-image: url(../images/back-figures.jpg);
@@ -275,6 +276,131 @@
   }
 }
 
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 42px 215px 48px;
+  background-color: $white;
+  border-radius: 15px;
+  box-shadow: 0px 0px 35px 0px rgba(212, 20, 90, 0.25);
+
+  &-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(25px);
+  }
+  &-container-close {
+    display: none;
+  }
+  &__content {
+    width: 750px;
+  }
+  &__title {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 45px;
+    text-align: center;
+  }
+  &__close-button {
+    height: 25px;
+    width: 25px;
+    border: transparent;
+    background-color: transparent;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer;
+  }
+  &__close-button::after,
+  &__close-button::before {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: $light-grey;
+    border-radius: 3px;
+    background-color: $placeholder;
+    position: absolute;
+    right: 0px;
+    top: 11px;
+  }
+  &__close-button::after {
+    transform: rotate(45deg);
+  }
+  &__close-button::before {
+    transform: rotate(-45deg);
+  }
+  &__button {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    border-radius: 9px;
+    font-size: 20px;
+    width: 169px;
+    height: 42px;
+    margin: 0;
+  }
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+// .modal__close-button:hover + .modal__close-button::after {
+//   background-color: black;
+// }
+// .modal__close-button:hover .modal__close-button::before {
+//   background-color: black;
+// }
+
+.application-form {
+  &__upper-fields {
+    display: flex;
+    gap: 25px;
+    margin-bottom: 17px;
+  }
+  &__field {
+    padding: 13px 20px 24px;
+    border-radius: 9px;
+    border: 1px solid #a1a1a1;
+    background: #fff;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  &__field-group {
+    width: 100%;
+  }
+}
+
+.field-group__message {
+  height: 82px;
+  margin-bottom: 48px;
+}
+
+.field-group__message .application-form__field {
+  height: 100%;
+}
+
+.field-group__message .application-form__field::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: $placeholder;
+}
+
+.application-form__field::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: $placeholder;
+}
+
+.visually-hidden {
+  display: none;
+}
 @media (min-width: 768px) {
   .header {
     padding: 25px 45px;
